--- a/templates/index.html
+++ b/templates/index.html
@@ -26,10 +26,8 @@
 
                             <div id="avg_table"
                                  style="width: 650px;height:400px; float:left;position:absolute; right:-50px; top:10px;"></div>
-
-
-                            <div style="width: 400px; float: right;position:absolute; right:-405px; top:-55px;">
-                                <table class="table" id="rseview_period_table" style="width: 400px;float: right;">
+                            <div style="width: 440px; float: right;position:absolute; right:-445px; top:-55px;">
+                                <table class="table" id="rseview_period_table" style="width: 440px;float: right;">
                                     <h3 id="label_data">
                                         <span class="label label-success">单数合计:</span>
                                         <span class="label label-danger">退单数:</span>
@@ -44,19 +42,19 @@
                                     </thead>
                                     <tbody>
                                     <tr class="warning">
-                                        <td>下午</td>
+                                        <td class="title">下午</td>
                                     </tr>
                                     <tr class="warning">
-                                        <td>上午</td>
+                                        <td class="title">上午</td>
                                     </tr>
                                     <tr class="warning">
-                                        <td>晚上</td>
+                                        <td class="title">晚上</td>
                                     </tr>
                                     <tr class="warning">
-                                        <td>深夜</td>
+                                        <td class="title">深夜</td>
                                     </tr>
                                     <tr class="warning">
-                                        <td>凌晨</td>
+                                        <td class="title">凌晨</td>
                                     </tr>
                                     </tbody>
                                 </table>
