--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
 {% extends 'nav.html' %}
 {% block title %}
 {% endblock %}
+{% block metas %}
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+{% endblock %}
 {% block main %}
     <title>首页</title>
     <script type="text/javascript" src="/static/js/index.js"></script>
@@ -19,46 +23,46 @@
                     <div class="panel-body" style="position:relative;">
 
                         <div class="panel-group" id="accordion">
-                            <div id="pie1"
-                                 style="width: 700px;height:400px; float:left"></div>
+                            <table class="table" id="rseview_period_table"
+                                   style="width: 1060px; height:120px;margin: auto">
+                                <caption>审批时段 情况（1-12）月</caption>
+                                <thead>
+                                <tr style="background-color: #9aa5ae;color: #f8f8f8">
+                                    <th>时段</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr class="warning">
+                                    <td class="title">下午</td>
+                                </tr>
+                                <tr class="warning">
+                                    <td class="title">上午</td>
+                                </tr>
+                                <tr class="warning">
+                                    <td class="title">晚上</td>
+                                </tr>
+                                <tr class="warning">
+                                    <td class="title">深夜</td>
+                                </tr>
+                                <tr class="warning">
+                                    <td class="title">凌晨</td>
+                                </tr>
+                                </tbody>
+                            </table>
 
-                            <div id="OA_Histogram" style="width: 1140px;height:350px; float:left;"></div>
 
                             <div id="avg_table"
-                                 style="width: 650px;height:400px; float:left;position:absolute; right:-50px; top:10px;"></div>
-                            <div style="width: 440px; float: right;position:absolute; right:-445px; top:-55px;">
-                                <table class="table" id="rseview_period_table" style="width: 440px;float: right;">
-                                    <h3 id="label_data">
-                                        <span class="label label-success">单数合计:</span>
-                                        <span class="label label-danger">退单数:</span>
-                                        <span class="label label-warning">超预算单:</span>
-                                    </h3>
-
-                                    <caption>审批时段 情况（1-12）月</caption>
-                                    <thead>
-                                    <tr style="background-color: #9aa5ae;color: #f8f8f8">
-                                        <th>时段</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr class="warning">
-                                        <td class="title">下午</td>
-                                    </tr>
-                                    <tr class="warning">
-                                        <td class="title">上午</td>
-                                    </tr>
-                                    <tr class="warning">
-                                        <td class="title">晚上</td>
-                                    </tr>
-                                    <tr class="warning">
-                                        <td class="title">深夜</td>
-                                    </tr>
-                                    <tr class="warning">
-                                        <td class="title">凌晨</td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                                <div style="width: 310px;float: right">
+                                 style="width: 1140px;height:300px; "></div>
+                            <div id="OA_Histogram" style="width: 1140px;height:350px;"></div>
+                            <div style="width: 480px; float: right;position:absolute; right:-485px; top:-55px;">
+                                <h3 id="label_data">
+                                    <span class="label label-success">单数合计:</span>
+                                    <span class="label label-danger">退单数:</span>
+                                    <span class="label label-warning">超预算单:</span>
+                                </h3>
+                                <div id="pie1"
+                                     style="width: 700px;height:400px;"></div>
+                                <div style="width: 310px;margin-left:50px;float: left">
                                     <div id="flow_table"></div>
                                 </div>
                             </div>
