--- a/templates/nav_login.html
+++ b/templates/nav_login.html
@@ -23,33 +23,25 @@
           href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.10/dist/css/bootstrap-select.min.css">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.10/dist/js/bootstrap-select.min.js"></script>
-
-
     {#    日期选择#}
     <link href="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css"
           rel="stylesheet">
     <script src="https://cdn.bootcss.com/moment.js/2.24.0/moment-with-locales.min.js" type="text/javascript"></script>
-
     <script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
-
-
-    <script src="https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts.min.js"></script>
-
     <style>
-
         a {
             text-decoration-line: none;
         }
 
         .container-fluid {
-            width: 1800px;
+            width: 1140px;
             margin: auto;
             background-color: #f8f8f8;
             color: #b1b1b1;
         }
 
         .content {
-            width: 1700px;
+            width: 1140px;
             min-height: 800px;
             margin: auto;
         }
@@ -144,12 +136,13 @@
 
         .personal-panel {
             float: right;
+            width: 200px;
             height: 40px;
             margin: auto;
             line-height: 50px;
         }
 
-        .img-box img {
+        .personal-panel .img-box img {
             width: 34px;
             float: left;
             margin-top: 8px;
@@ -163,71 +156,43 @@
             line-height: 50px;
 
         }
-
-        a {
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: none;
-        }
     </style>
 </head>
 <body>
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">优尼中国情报月度报表</a>
+            <a class="navbar-brand" href="/">OfficeAutomation</a>
         </div>
-        <div style="float: left;">
-            <div class="switch switch-large" style="float: left ;margin-top:16px;margin-left: 30px">
-                <input id="sel_year" type="checkbox"/>
-                全年
-            </div>
-            <div class='input-group date' id='selectDateTimePicker' style="margin-top: 8px ;width: 200px">
-                <input name="startTime" type='text' class="form-control" placeholder=""/>
-                <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
-            </div>
 
-            <div class='input-group date' id='selectDateTimePicker2' style="float: left;margin-top: 8px ;width: 200px">
-
-                <input name="startTime" type='text' class="form-control" placeholder=""/>
-                <span class="input-group-addon"><span class="glyphicon glyphicon-calendar">
-                    </span></span>
-
-            </div>
-            <div style="float: left;margin-top: 8px">
-                <select id="queryQuarter" class="selectpicker">
-                    <option data-tokens="ketchup mustard">全年</option>
-                    <option data-tokens="ketchup mustard">一季度</option>
-                    <option data-tokens="ketchup mustard">二季度</option>
-                    <option data-tokens="ketchup mustard">三季度</option>
-                    <option data-tokens="ketchup mustard">四季度</option>
-                </select>
-            </div>
-        </div>
-        <div class="personal-panel">
+        <ul class="nav navbar-nav">
             {% if current_user.is_authenticated %}
-                <a href="/">
-                    <div class="form-group img-box">
-                        <img src="/static/img/head.png" class="img-circle">
-                        Hi {{ current_user.name }} !
-                    </div>
-                    <p class="navbar-right fr">
-                        <a href="/logout" class="btn btn-info ">
-                            <span class="glyphicon glyphicon-cog"></span> 登出
-                        </a>
-                    </p>
-                </a>
+                {% if current_user.employee_type =='管理员' %}
+                    <li class=""><a class="" href="/">任务分配</a></li>
+                    <li class=""><a class="" href="/">人员信息</a></li>
+                {% endif %}
             {% endif %}
-        </div>
+        </ul>
+        <div class="personal-panel">
+            {% if not current_user.is_authenticated %}
+                Hi 请登录 !
+                <p class="navbar-right">
+                    <a href="/login" class="btn btn-info ">
+                        <span class="glyphicon glyphicon-cog"></span> 登录
+                    </a>
+                </p>
+            {% endif %}
 
+        </div>
     </div>
 </nav>
 <div class="content">
     {% block main %}
     {% endblock %}
+
 </div>
+
+
 <footer>
     <div>
         <p>
@@ -237,8 +202,8 @@
     </div>
     <div>
         <p>Copyright © 2018-2019 Cracklcz.</p>
-        <p>粤ICP备19020426号-1</p>
-        <p>QQ：</p>
+        <p>湘ICP备19010428号-1</p>
+        <p>QQ：13786429981</p>
     </div>
 </footer>
 
