--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,37 +3,31 @@
 <head>
     <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon"/>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.14.2/dist/bootstrap-table.min.css"/>
+    <link rel="stylesheet"  href="/static/js/source/bootstrap.min.css">
 
-    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/static/js/source/bootstrap-table.min.css"/>
+
+    <script src="/static/js/source/jquery.min.js"></script>
+    <script src="/static/js/source/bootstrap.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://unpkg.com/bootstrap-table@1.14.2/dist/bootstrap-table.min.js" type="text/javascript"></script>
+    <script src="/static/js/source/bootstrap-table.min.js" type="text/javascript"></script>
     <!-- Latest compiled and minified Locales -->
-    <script src="https://unpkg.com/bootstrap-table@1.14.2/dist/locale/bootstrap-table-zh-CN.min.js"
+    <script src="/static/js/source/bootstrap-table-zh-CN.min.js"
             type="text/javascript"></script>
-    <script src="https://cdn.bootcss.com/moment.js/2.24.0/moment-with-locales.min.js" type="text/javascript"></script>
-    <script src="http://code.highcharts.com/highcharts.js"></script>
-    <script src="//cdn.bootcss.com/jqueryui/1.11.4/jquery-ui.js"></script>
+    <script src="/static/js/source/moment-with-locales.min.js" type="text/javascript"></script>
+    <script src="/static/js/source/jquery-ui.js"></script>
     {#    <script src="/static/js/jquery.easyui.min.js"></script>#}
     {#    下拉菜单#}
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.10/dist/css/bootstrap-select.min.css">
+    <link rel="stylesheet" href="/static/js/source/bootstrap-select.min.css">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.10/dist/js/bootstrap-select.min.js"></script>
-
-
+    <script src="/static/js/source/bootstrap-select.min.js"></script>
     {#    日期选择#}
-    <link href="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css"
+    <link href="/static/js/source/bootstrap-datetimepicker.min.css"
           rel="stylesheet">
-    <script src="https://cdn.bootcss.com/moment.js/2.24.0/moment-with-locales.min.js" type="text/javascript"></script>
-
-    <script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
-
-
-    <script src="https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts.min.js"></script>
+    <script src="/static/js/source/moment-with-locales.min.js" type="text/javascript"></script>
+    <script src="/static/js/source/bootstrap-datetimepicker.min.js"></script>
+    <script src="/static/js/source/echarts.min.js"></script>
 
     <style>
 
@@ -211,7 +205,7 @@
                 <a href="/">
                     <div class="form-group img-box">
                         <img src="/static/img/head.png" class="img-circle">
-                        Hi {{ current_user.name }} !
+                        Hi {{ current_user.username }} !
                     </div>
                     <p class="navbar-right fr">
                         <a href="/logout" class="btn btn-info ">
